<?xml version="1.0"?>
<package format="2">
  <name>hmi_qt</name>
  <version>1.0.0</version>
  <description> shuikoushan robot hmi</description>
  <maintainer email="chenchang@wattman.cn">chenchang</maintainer>
  <author>chenchang</author>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>message_generation</depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>rviz</depend>
  <!-- <depend>routines</depend> -->
  <!-- <depend>plc_control</depend> -->
  <build_export_depend>qtbase5-dev</build_export_depend>
  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-gui</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>

</package>