<?xml version="1.0"?>
<package format="2">
  <name>hmi_msgs</name>
  <version>0.0.1</version>
  <description>hmi_api</description>
  <maintainer email="zhaoxingyu@wattman.cn">zhaoxingyu</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>message_generation</depend>
</package>
